doc/2.8/_sources/reference/generated/ak.count.rst.txt
ak.count
--------

.. py:module: ak.count

Defined in `awkward.operations.ak_count <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_count.py>`__ on `line 23 <https://github.com/scikit-hep/awkward/blob/0b5ee6e87d2a6d475c58ee0b3ff2106b415311fd/src/awkward/operations/ak_count.py#L23>`__.

.. py:function:: ak.count(array, axis=None, *, keepdims=False, mask_identity=False, highlevel=True, behavior=None, attrs=None)


    :param array: Array-like data (anything :py:obj:`ak.to_layout` recognizes).
    :param axis: If None, combine all values from the array into
             a single scalar result; if an int, group by that axis: ``0`` is the
             outermost, ``1`` is the first level of nested lists, etc., and
             negative ``axis`` counts from the innermost: ``-1`` is the innermost,
             ``-2`` is the next level up, etc; if a str, it is interpreted as the
             name of the axis which maps to an int if named axes are present.
             Named axes are attached to an array using :py:obj:`ak.with_named_axis` and
             removed with :py:obj:`ak.without_named_axis`; also see the
             `Named axes user guide <../../user-guide/how-to-array-properties-named-axis.html>`__.
    :type axis: None or int or str
    :param keepdims: If False, this reducer decreases the number of
                 dimensions by 1; if True, the reduced values are wrapped in a new
                 length-1 dimension so that the result of this operation may be
                 broadcasted with the original array.
    :type keepdims: bool
    :param mask_identity: If True, reducing over empty lists results in
                      None (an option type); otherwise, reducing over empty lists
                      results in the operation's identity.
    :type mask_identity: bool
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict
    :param attrs: Custom attributes for the output array, if
              high-level.
    :type attrs: None or dict

Counts elements of ``array`` (many types supported, including all
Awkward Arrays and Records). The identity of counting is ``0`` and it is
usually not masked.

This function has no analog in NumPy because counting values in a
rectilinear array would only result in elements of the NumPy array's
`shape <https://docs.scipy.org/doc/numpy/reference/generated/numpy.ndarray.shape.html>`__.

However, for nested lists of variable dimension and missing values, the
result of counting is non-trivial. For example, with this

.. code-block:: python


    >>> array = ak.Array([[ 0.1,  0.2      ],
    ...                   [None, 10.2, None],
    ...                   None,
    ...                   [20.1, 20.2, 20.3],
    ...                   [30.1, 30.2      ]])

the result of counting over the innermost dimension is

.. code-block:: python


    >>> ak.count(array, axis=-1)
    <Array [2, 1, None, 3, 2] type='5 * ?int64'>

the outermost dimension is

.. code-block:: python


    >>> ak.count(array, axis=0)
    <Array [3, 4, 1] type='3 * int64'>

and all dimensions is

.. code-block:: python


    >>> ak.count(array, axis=None)
    8

The gaps and None values are not counted, and if a None value occurs at
a higher axis than the one being counted, it is kept as a placeholder
so that the outer list length does not change.

See :py:obj:`ak.sum` for a more complete description of nested list and missing
value (None) handling in reducers.

Note also that this function is different from :py:obj:`ak.num`, which counts
the number of values at a given depth, maintaining structure: :py:obj:`ak.num`
never counts across different lists the way that reducers do (:py:obj:`ak.num`
is not a reducer; :py:obj:`ak.count` is). For the same ``array``,

.. code-block:: python


    >>> ak.num(array, axis=0)
    5
    >>> ak.num(array, axis=1)
    <Array [2, 3, None, 3, 2] type='5 * ?int64'>

If it is desirable to include None values in :py:obj:`ak.count`, use :py:obj:`ak.fill_none`
to turn the None values into something that would be counted.

If it is desirable to exclude NaN ("not a number") values from :py:obj:`ak.count`,
use :py:obj:`ak.nan_to_none` to turn them into None, which are not counted.

